DevPackage/force-app/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Bugatti</fullName>
            </value>
            <value>
                <fullName>Ferrari</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
            <value>
                <fullName>Lamborghini</fullName>
            </value>
            <value>
                <fullName>Mustang</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>