DevPackage/force-app/main/default/objects/Product2/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Beige</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>