DevPackage/force-app/main/default/objects/Product2/fields/Has_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Has_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Promotion</label>
    <type>Checkbox</type>
</CustomField>